# homeworks

714-project/: Makefile  README.md  conv.h  conv2d.py  convolve_help.cpp  convolve_help.h  cpu_conv.cpp  cudnn.cpp  diff_test.cpp  fast_cpu_conv.cpp  fvec.hpp  gold_conv.cpp  gold_conv.h  opencl_executor.h  opencl_impl.cpp  opencl_kern.cl  perf_test.cpp  run_eval_gpu.sh  run_eval_slurm.sh
CompilersHW/: .gitignore  README.md
CompilersHW/hw1/: functions.cc
CompilersHW/hw2/: debugging.cc
CompilersHW/hw3files/: BUGS.txt  CMakeLists.txt  Makefile  ptrtree.cc  ptrtree.hh  test_tree.cc  tree.hh  vectree.cc
CompilersHW/hw4/: Makefile  compress.cc  decompress.cc  huffman.cc  huffman.hh  ptrtree.cc  test_huffman.cc
CompilersHW/hw4/regular/: CMakeLists.txt  decode.cc  encode.cc  huffman.hh  readme.txt
HW5/: .gitignore  README.md  cache.h  client.cpp  make.sh  run_test.py  server.cpp  telnet.sh  user_con.hpp
HW5/impl/: lru_replacement.c
HW5/test/: basic_test.c  cachewrapper.h  main.c  test.h  test_helper.h
HW6/: .gitignore  final.txt  helgrind.txt  make.sh  maketest.sh  memcheck.txt  perfout.txt  readme.md  run_tests.py  sing_mach_data.txt  time_cache.cpp  two_mach_data.txt  unig.cpp
HW9/: .gitignore  conv1.cpp  conv2.cpp  convatoi.cpp  converter.cpp  converter.h  converter2.cpp  convunroll.cpp  driver.cpp  readme.md
sysHW2/: README.md  boxplot.txt  compile.sh  conv.py
sysHW3/: hash_cache.c  lru_replacement.c  readme.md  replacement.h  test.c
sysHW4/: Makefile  cache.h  cachewrapper.h  create_cache_wrapper.c  readme.md  run_test.sh  test.c
(+112 files in other folders)
